docs: expand and fix theory bibliography

--- a/src/theory/bibliography.bib
+++ b/src/theory/bibliography.bib
@@ -1,17 +1,100 @@
-@book{weinberg_1995,
-  author={Weinberg, Steven},
-  title={The Quantum Theory of Fields},
-  volume={1},
-  DOI={10.1017/CBO9781139644167},
-  publisher={Cambridge University Press},
-  year={1995},
-  place={Cambridge}
+
+@misc{chungPrimerKmatrixFormalism1995,
+  title = {A {{Primer}} on {{K}}-Matrix {{Formalism}} \textemdash{} {{Version VII}}},
+  author = {Chung, Suh-Urk},
+  year = {1995},
+  month = mar
 }
 
-@techreport{chung2006spin,
-  title={SPIN FORMALISMS (UPDATED VERSION)},
-  author={Chung, Suh-Urk},
-  year={2006},
-  institution={Brookhaven National Lab.(BNL), Upton, NY (United States)},
-  url={https://suchung.web.cern.ch/spinfm1.pdf}
+@book{chungSpinFormalismsUpdated2014,
+  title = {Spin {{Formalisms}} ({{Updated Version}})},
+  author = {Chung, Suh-Urk},
+  year = {2014},
+  month = jul,
+  publisher = {{Brookhaven National Laboratory}},
+  collaborator = {Laboratory, Brookhaven National and of Scientific, United States Department of Energy Office and Information, Technical and {DOE/SC.}}
+}
+
+@article{ketzerLightMesonSpectroscopyCOMPASS2019,
+  title = {Light-{{Meson Spectroscopy}} with {{COMPASS}}},
+  author = {Ketzer, Bernhard and Grube, Boris and Ryabchikov, Dmitry},
+  year = {2019},
+  month = dec,
+  abstract = {Despite decades of research, we still lack a detailed quantitative understanding of the way quantum chromodynamics (QCD) generates the spectrum of hadrons. Precise experimental studies of the hadron excitation spectrum and the dynamics of hadrons help to improve models and to test effective theories and lattice QCD simulations. In addition, QCD seems to allow hadrons beyond the three-quark and quark-antiquark configurations of the constituent-quark model. These so-called exotic hadrons contain additional constituent (anti)quarks or excited gluonic fields that contribute to the quantum numbers of the hadron. The COMPASS experiment at CERN is studying the excitation spectrum of light mesons composed of up, down, and strange quarks. The excited mesons are produced via the strong interaction by scattering a 190 GeV/c pion beam off proton or nuclear targets. On heavy nuclear targets, in addition the electromagnetic interaction contributes in the form of quasi-real photon exchange at very low four-momentum transfer squared. COMPASS has performed the most comprehensive analyses to date of isovector resonances decaying into multi-particle final states. In this review, we give a general introduction into scattering theory and the employed partial-wave analysis techniques. We also describe novel methods developed for the high-precision COMPASS data. The COMPASS results are summarized and compared to previous measurements. In addition, we discuss possible signals for exotic mesons and conclude that COMPASS data provide solid evidence for the existence of the manifestly exotic \$\textbackslash pi\_1(1600)\$, which has quantum numbers forbidden for a quark-model state, and of the \$a\_1(1420)\$, which does not fit into the quark-model spectrum. By isolating the contributions from quasi-real photon exchange, COMPASS has measured the radiative widths of the \$a\_2(1320)\$ and, for the first time, that of the \$\textbackslash pi\_2(1670)\$.},
+  archivePrefix = {arXiv},
+  eprint = {1909.06366},
+  eprinttype = {arxiv},
+  journal = {arXiv:1909.06366 [hep-ex, physics:hep-ph]},
+  primaryClass = {hep-ex, physics:hep-ph}
+}
+
+@misc{kutschkeAngularDistributionCookbook1996,
+  title = {An {{Angular Distribution Cookbook}}},
+  author = {Kutschke, Rob},
+  year = {1996},
+  month = jan
+}
+
+@book{martinElementaryParticleTheory1970,
+  title = {Elementary {{Particle Theory}}},
+  author = {Martin, Alan D. and Spearman, T. D.},
+  year = {1970},
+  publisher = {{North-Holland Pub. Co}},
+  address = {{Amsterdam}},
+  isbn = {978-0-7204-0157-8},
+  lccn = {QC721 .M298}
+}
+
+@article{petersPrimerPartialWave2004,
+  title = {A {{Primer}} on {{Partial Wave Analysis}}},
+  author = {Peters, Klaus},
+  year = {2004},
+  month = dec,
+  abstract = {In the 90s of the last century high statistics experiments with fully equipped 4\$\textbackslash pi\$ detectors have lead to a better insight in the spectrum of hadrons. In particular the finding of crypto-exotic and \$J\^\{PC\}\$ exotic states tremendously improved the experimental situation in meson spectroscopy. All this was possible only with sophisticated analysis methods like the decomposition of measured phase-space distribution into partial waves and to express the partial waves in terms of complicated dynamical functions. This paper gives an introduction about the concepts and formalisms involved.},
+  archivePrefix = {arXiv},
+  eprint = {hep-ph/0412069},
+  eprinttype = {arxiv},
+  journal = {arXiv:hep-ph/0412069}
+}
+
+@misc{richmanExperimenterGuideHelicity1984,
+  title = {An {{Experimenter}}'s {{Guide}} to the {{Helicity Formalism}}},
+  author = {Richman, Jeffrey D.},
+  year = {1984},
+  month = jun,
+  abstract = {The helicity formalism is developed in detail and used to obtain final state angular distributions in relativistic scattering and decay processes. The topics covered include properties of rotation operators, construction of helicity states, scattering and decay amplitudes, the parity of helicity states, and the treatment of identical particles.}
+}
+
+@incollection{tanabashi47Kinematics2019,
+  title = {47. {{Kinematics}}},
+  booktitle = {Review of {{Particle Physics}}: {{Volume II Particle Listings}}},
+  author = {Tanabashi, M. and Hagiwara, K. and Hikasa, K. and Nakamura, K. and Sumino, Y. and Takahashi, F. and Tanaka, J. and Agashe, K. and Aielli, G. and Amsler, C. and Antonelli, M. and Asner, D. M. and Baer, H. and Banerjee, Sw. and Barnett, R. M. and Basaglia, T. and Bauer, C. W. and Beatty, J. J. and Belousov, V. I. and Beringer, J. and Bethke, S. and Bettini, A. and Bichsel, H. and Biebel, O. and Black, K. M. and Blucher, E. and Buchmuller, O. and Burkert, V. and Bychkov, M. A. and Cahn, R. N. and Carena, M. and Ceccucci, A. and Cerri, A. and Chakraborty, D. and Chen, M.-C. and Chivukula, R. S. and Cowan, G. and Dahl, O. and D'Ambrosio, G. and Damour, T. and {de Florian}, D. and {de Gouv{\^e}a}, A. and DeGrand, T. and {de Jong}, P. and Dissertori, G. and Dobrescu, B. A. and D'Onofrio, M. and Doser, M. and Drees, M. and Dreiner, H. K. and Dwyer, D. A. and Eerola, P. and Eidelman, S. and Ellis, J. and Erler, J. and Ezhela, V. V. and Fetscher, W. and Fields, B. D. and Firestone, R. and Foster, B. and Freitas, A. and Gallagher, H. and Garren, L. and Gerber, H.-J. and Gerbier, G. and Gershon, T. and Gershtein, Y. and Gherghetta, T. and Godizov, A. A. and Goodman, M. and Grab, C. and Gritsan, A. V. and Grojean, C. and Groom, D. E. and Gr{\"u}newald, M. and Gurtu, A. and Gutsche, T. and Haber, H. E. and Hanhart, C. and Hashimoto, S. and Hayato, Y. and Hayes, K. G. and Hebecker, A. and Heinemeyer, S. and Heltsley, B. and {Hern{\'a}ndez-Rey}, J. J. and Hisano, J. and H{\"o}cker, A. and Holder, J. and Holtkamp, A. and Hyodo, T. and Irwin, K. D. and Johnson, K. F. and Kado, M. and Karliner, M. and Katz, U. F. and Klein, S. R. and Klempt, E. and Kowalewski, R. V. and Krauss, F. and Kreps, M. and Krusche, B. and Kuyanov, Yu. V. and Kwon, Y. and Lahav, O. and Laiho, J. and Lesgourgues, J. and Liddle, A. and Ligeti, Z. and Lin, C.-J. and Lippmann, C. and Liss, T. M. and Littenberg, L. and Lugovsky, K. S. and Lugovsky, S. B. and Lusiani, A. and Makida, Y. and Maltoni, F. and Mannel, T. and Manohar, A. V. and Marciano, W. J. and Martin, A. D. and Masoni, A. and Matthews, J. and Mei{\ss}ner, U.-G. and Milstead, D. and Mitchell, R. E. and M{\"o}nig, K. and Molaro, P. and Moortgat, F. and Moskovic, M. and Murayama, H. and Narain, M. and Nason, P. and Navas, S. and Neubert, M. and Nevski, P. and Nir, Y. and Olive, K. A. and Pagan Griso, S. and Parsons, J. and Patrignani, C. and Peacock, J. A. and Pennington, M. and Petcov, S. T. and Petrov, V. A. and Pianori, E. and Piepke, A. and Pomarol, A. and Quadt, A. and Rademacker, J. and Raffelt, G. and Ratcliff, B. N. and Richardson, P. and Ringwald, A. and Roesler, S. and Rolli, S. and Romaniouk, A. and Rosenberg, L. J. and Rosner, J. L. and Rybka, G. and Ryutin, R. A. and Sachrajda, C. T. and Sakai, Y. and Salam, G. P. and Sarkar, S. and Sauli, F. and Schneider, O. and Scholberg, K. and Schwartz, A. J. and Scott, D. and Sharma, V. and Sharpe, S. R. and Shutt, T. and Silari, M. and Sj{\"o}strand, T. and Skands, P. and Skwarnicki, T. and Smith, J. G. and Smoot, G. F. and Spanier, S. and Spieler, H. and Spiering, C. and Stahl, A. and Stone, S. L. and Sumiyoshi, T. and Syphers, M. J. and Terashi, K. and Terning, J. and Thoma, U. and Thorne, R. S. and Tiator, L. and Titov, M. and Tkachenko, N. P. and T{\"o}rnqvist, N. A. and Tovey, D. R. and Valencia, G. and {Van de Water}, R. and Varelas, N. and Venanzoni, G. and Verde, L. and Vincter, M. G. and Vogel, P. and Vogt, A. and Wakely, S. P. and Walkowiak, W. and Walter, C. W. and Wands, D. and Ward, D. R. and Wascko, M. O. and Weiglein, G. and Weinberg, D. H. and Weinberg, E. J. and White, M. and Wiencke, L. R. and Willocq, S. and Wohl, C. G. and Womersley, J. and Woody, C. L. and Workman, R. L. and Yao, W.-M. and Zeller, G. P. and Zenin, O. V. and Zhu, R.-Y. and Zhu, S.-L. and Zimmermann, F. and Zyla, P. A. and Anderson, J. and Fuller, L. and Lugovsky, V. S. and Schaffner, P. and {Particle Data Group}},
+  year = {2019},
+  month = aug,
+  volume = {98},
+  pages = {567--570},
+  language = {en},
+  series = {Physical {{Review}}}
+}
+
+@incollection{tanabashi48Resonances2019,
+  title = {48. {{Resonances}}},
+  booktitle = {Review of {{Particle Physics}}: {{Volume II Particle Listings}}},
+  author = {Tanabashi, M. and Hagiwara, K. and Hikasa, K. and Nakamura, K. and Sumino, Y. and Takahashi, F. and Tanaka, J. and Agashe, K. and Aielli, G. and Amsler, C. and Antonelli, M. and Asner, D. M. and Baer, H. and Banerjee, Sw. and Barnett, R. M. and Basaglia, T. and Bauer, C. W. and Beatty, J. J. and Belousov, V. I. and Beringer, J. and Bethke, S. and Bettini, A. and Bichsel, H. and Biebel, O. and Black, K. M. and Blucher, E. and Buchmuller, O. and Burkert, V. and Bychkov, M. A. and Cahn, R. N. and Carena, M. and Ceccucci, A. and Cerri, A. and Chakraborty, D. and Chen, M.-C. and Chivukula, R. S. and Cowan, G. and Dahl, O. and D'Ambrosio, G. and Damour, T. and {de Florian}, D. and {de Gouv{\^e}a}, A. and DeGrand, T. and {de Jong}, P. and Dissertori, G. and Dobrescu, B. A. and D'Onofrio, M. and Doser, M. and Drees, M. and Dreiner, H. K. and Dwyer, D. A. and Eerola, P. and Eidelman, S. and Ellis, J. and Erler, J. and Ezhela, V. V. and Fetscher, W. and Fields, B. D. and Firestone, R. and Foster, B. and Freitas, A. and Gallagher, H. and Garren, L. and Gerber, H.-J. and Gerbier, G. and Gershon, T. and Gershtein, Y. and Gherghetta, T. and Godizov, A. A. and Goodman, M. and Grab, C. and Gritsan, A. V. and Grojean, C. and Groom, D. E. and Gr{\"u}newald, M. and Gurtu, A. and Gutsche, T. and Haber, H. E. and Hanhart, C. and Hashimoto, S. and Hayato, Y. and Hayes, K. G. and Hebecker, A. and Heinemeyer, S. and Heltsley, B. and {Hern{\'a}ndez-Rey}, J. J. and Hisano, J. and H{\"o}cker, A. and Holder, J. and Holtkamp, A. and Hyodo, T. and Irwin, K. D. and Johnson, K. F. and Kado, M. and Karliner, M. and Katz, U. F. and Klein, S. R. and Klempt, E. and Kowalewski, R. V. and Krauss, F. and Kreps, M. and Krusche, B. and Kuyanov, Yu. V. and Kwon, Y. and Lahav, O. and Laiho, J. and Lesgourgues, J. and Liddle, A. and Ligeti, Z. and Lin, C.-J. and Lippmann, C. and Liss, T. M. and Littenberg, L. and Lugovsky, K. S. and Lugovsky, S. B. and Lusiani, A. and Makida, Y. and Maltoni, F. and Mannel, T. and Manohar, A. V. and Marciano, W. J. and Martin, A. D. and Masoni, A. and Matthews, J. and Mei{\ss}ner, U.-G. and Milstead, D. and Mitchell, R. E. and M{\"o}nig, K. and Molaro, P. and Moortgat, F. and Moskovic, M. and Murayama, H. and Narain, M. and Nason, P. and Navas, S. and Neubert, M. and Nevski, P. and Nir, Y. and Olive, K. A. and Pagan Griso, S. and Parsons, J. and Patrignani, C. and Peacock, J. A. and Pennington, M. and Petcov, S. T. and Petrov, V. A. and Pianori, E. and Piepke, A. and Pomarol, A. and Quadt, A. and Rademacker, J. and Raffelt, G. and Ratcliff, B. N. and Richardson, P. and Ringwald, A. and Roesler, S. and Rolli, S. and Romaniouk, A. and Rosenberg, L. J. and Rosner, J. L. and Rybka, G. and Ryutin, R. A. and Sachrajda, C. T. and Sakai, Y. and Salam, G. P. and Sarkar, S. and Sauli, F. and Schneider, O. and Scholberg, K. and Schwartz, A. J. and Scott, D. and Sharma, V. and Sharpe, S. R. and Shutt, T. and Silari, M. and Sj{\"o}strand, T. and Skands, P. and Skwarnicki, T. and Smith, J. G. and Smoot, G. F. and Spanier, S. and Spieler, H. and Spiering, C. and Stahl, A. and Stone, S. L. and Sumiyoshi, T. and Syphers, M. J. and Terashi, K. and Terning, J. and Thoma, U. and Thorne, R. S. and Tiator, L. and Titov, M. and Tkachenko, N. P. and T{\"o}rnqvist, N. A. and Tovey, D. R. and Valencia, G. and {Van de Water}, R. and Varelas, N. and Venanzoni, G. and Verde, L. and Vincter, M. G. and Vogel, P. and Vogt, A. and Wakely, S. P. and Walkowiak, W. and Walter, C. W. and Wands, D. and Ward, D. R. and Wascko, M. O. and Weiglein, G. and Weinberg, D. H. and Weinberg, E. J. and White, M. and Wiencke, L. R. and Willocq, S. and Wohl, C. G. and Womersley, J. and Woody, C. L. and Workman, R. L. and Yao, W.-M. and Zeller, G. P. and Zenin, O. V. and Zhu, R.-Y. and Zhu, S.-L. and Zimmermann, F. and Zyla, P. A. and Anderson, J. and Fuller, L. and Lugovsky, V. S. and Schaffner, P. and {Particle Data Group}},
+  year = {2019},
+  month = aug,
+  volume = {98},
+  pages = {1250--1281},
+  language = {en},
+  series = {Physical {{Review}}}
+}
+
+@book{weinbergQuantumTheoryFields1995b,
+  title = {The {{Quantum Theory}} of {{Fields}}, {{Volume}} 1: {{Foundations}}},
+  author = {Weinberg, Steven},
+  year = {1995},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge ; New York}},
+  isbn = {978-0-521-55001-7 978-0-521-55002-4 978-0-521-66000-6},
+  lccn = {QC174.45 .W45 1995}
 }
