docs: add missing URLs

--- a/src/theory/bibliography.bib
+++ b/src/theory/bibliography.bib
@@ -33,7 +33,8 @@
   title = {A {{Primer}} on {{K}}-Matrix {{Formalism}} \textemdash{} {{Version VII}}},
   author = {Chung, Suh-Urk},
   year = {1995},
-  month = mar
+  month = mar,
+  url = {http://www.ep.ph.bham.ac.uk/exp/WA102/pics/chung5.ps.gz}
 }
 
 @book{chungSpinFormalismsUpdated2014,
@@ -74,6 +75,7 @@
   year = {1970},
   publisher = {{North-Holland Pub. Co}},
   address = {{Amsterdam}},
+  url = {https://isbnsearch.org/isbn/9780720401578},
   isbn = {978-0-7204-0157-8},
   lccn = {QC721 .M298}
 }
