docs: render ISBN as links

--- a/src/theory/bibliography.bib
+++ b/src/theory/bibliography.bib
@@ -75,7 +75,6 @@
   year = {1970},
   publisher = {{North-Holland Pub. Co}},
   address = {{Amsterdam}},
-  url = {https://isbnsearch.org/isbn/9780720401578},
   isbn = {978-0-7204-0157-8},
   lccn = {QC721 .M298}
 }
@@ -133,7 +132,7 @@
   year = {1995},
   publisher = {{Cambridge University Press}},
   address = {{Cambridge ; New York}},
-  isbn = {978-0-521-55001-7 978-0-521-55002-4 978-0-521-66000-6},
+  isbn = {978-0-521-55001-7},
   lccn = {QC174.45 .W45 1995}
 }
 
