--- a/src/theory/bibliography.bib
+++ b/src/theory/bibliography.bib
@@ -1,4 +1,19 @@
 
+@article{aitchisonMatrixFormalismOverlapping1972,
+  title = {The {$\mathsl{K}$}-Matrix Formalism for Overlapping Resonances},
+  author = {Aitchison, I.J.R.},
+  year = {1972},
+  month = jul,
+  volume = {189},
+  pages = {417--423},
+  issn = {03759474},
+  doi = {10.1016/0375-9474(72)90305-3},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/0375947472903053},
+  journal = {Nuclear Physics A},
+  language = {en},
+  number = {2}
+}
+
 @book{amslerQuarkStructureHadrons2018,
   title = {The {{Quark Structure}} of {{Hadrons}}: {{An Introduction}} to the {{Phenomenology}} and {{Spectroscopy}}},
   shorttitle = {The {{Quark Structure}} of {{Hadrons}}},
