fix: remove redundant Chung K-matrix paper
There were two: the official one has been updated with DOI, the
informal one removed

--- a/src/theory/bibliography.bib
+++ b/src/theory/bibliography.bib
@@ -35,21 +35,15 @@
   title = {{Partial wave analysis in K-matrix formalism}},
   author = {Chung, Suh-Urk and Brose, J. and Hackmann, R. and Klempt, E. and Spanier, S. and Strassburger, C.},
   year = {1995},
+  month = may,
   volume = {507},
   pages = {404--430},
   issn = {00033804, 15213889},
   doi = {10.1002/andp.19955070504},
+  url = {http://doi.wiley.com/10.1002/andp.19955070504},
   journal = {Annalen der Physik},
   language = {de},
   number = {5}
-}
-
-@misc{chungPrimerKmatrixFormalism1995,
-  title = {A {{Primer}} on {{K}}-Matrix {{Formalism}} \textemdash{} {{Version VII}}},
-  author = {Chung, Suh-Urk},
-  year = {1995},
-  month = mar,
-  url = {http://www.ep.ph.bham.ac.uk/exp/WA102/pics/chung5.ps.gz}
 }
 
 @book{chungSpinFormalismsUpdated2014,
