build: convert into actual Python package

--- a/src/theory/dynamics.ipynb
+++ b/src/theory/dynamics.ipynb
@@ -189,25 +189,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "from pwa_pages import plot\n",
     "\n",
     "Gamma = 0.25\n",
     "E0 = 0.75\n",
-    "\n",
-    "x1 = 0\n",
-    "x2 = 1.5\n",
-    "n_steps = 100\n",
-    "step_size = (x2 - x1) / n_steps\n",
-    "x = np.arange(x1, x2, step_size)\n",
-    "\n",
     "gamma2_4 = Gamma ** 2 / 4\n",
-    "y = gamma2_4 / ((x - E0) ** 2 + gamma2_4)\n",
-    "\n",
-    "plt.plot(x, abs(y.real))\n",
-    "plt.title(\"Non-relativistic Breit-Wigner\")\n",
-    "plt.xlabel(\"$E$ (A.U.)\")\n",
-    "plt.ylabel(\"$|M(E)|^2$\");"
+    "plot(\n",
+    "    lambda x: gamma2_4 / ((x - E0) ** 2 + gamma2_4),\n",
+    "    range=(0, 1.5),\n",
+    "    title=\"Non-relativistic Breit-Wigner\",\n",
+    "    xlabel=\"$E$ (A.U.)\",\n",
+    "    ylabel=\"$|M(E)|^2$\",\n",
+    ")"
    ]
   },
   {
