--- a/docs/theory/dynamics.ipynb
+++ b/docs/theory/dynamics.ipynb
@@ -8,13 +8,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    ".. warning::\n",
-    "  These pages and are **under development**."
+    "```{warning}\n",
+    "These pages and are **under development**.\n",
+    "```"
    ]
   },
   {
@@ -25,31 +24,37 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Since :term:`scattering operator` ($S$-matrix) formulates the transition amplitude from initial state :math:`\\left|i\\right>` to final state :math:`\\left|f\\right>` through :math:`\\left<i\\right|S\\left|f\\right>`, it is a **unitary** operator—probability is conserved, meaning $SS^* = I$. Now, :ref:`having defined the transition operator <theory/introduction:Transition amplitude>` through $S = I + iT$, we can introduce another operator: $K^{-1} = T^{-1} + iI$ :cite:`chungPartialWaveAnalysis1995`. \n",
+    "Since {term}`scattering operator` ($S$-matrix) formulates the transition amplitude from initial state $\\left|i\\right>$ to final state $\\left|f\\right>$ through $\\left<i\\right|S\\left|f\\right>$, it is a **unitary** operator—probability is conserved, meaning $SS^* = I$. Now, [having defined the transition operator](./introduction#Transition-amplitude) through $S = I + iT$, we can introduce another operator: $K^{-1} = T^{-1} + iI$ {cite}`chungPartialWaveAnalysis1995`. \n",
     "  \n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
-    ".. todo:: Explain why this new matrix interesting?"
+    "```{todo}\n",
+    "Explain why this new matrix interesting?\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
-    ".. todo:: Definition in terms of $T$-matrix"
+    "```{todo}\n",
+    "Definition in terms of $T$-matrix\n",
+    "```"
    ]
   },
   {
@@ -67,12 +72,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
-    ".. todo:: Derive from $K$-matrix instead/as well."
+    "```{todo}\n",
+    "Derive from $K$-matrix instead/as well.\n",
+    "```"
    ]
   },
   {
@@ -102,27 +111,14 @@
     "E' = E_0 - \\frac{i}{2}\\Gamma\n",
     "$$\n",
     "\n",
-    "Now, as an experimental physicist, one is interested in predicting the probability of observing the particle at energy $E$ (we want to describe the observed invariant mass distributions). This can be achieved by applying a [Fourier transform](https://en.wikipedia.org/wiki/Fourier_transform), so that $\\psi$ is described in terms of energy $E$ (or frequency $\\omega$) instead of time $t$:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
-   "source": [
-    ".. math::\n",
+    "Now, as an experimental physicist, one is interested in predicting the probability of observing the particle at energy $E$ (we want to describe the observed invariant mass distributions). This can be achieved by applying a [Fourier transform](https://en.wikipedia.org/wiki/Fourier_transform), so that $\\psi$ is described in terms of energy $E$ (or frequency $\\omega$) instead of time $t$:\n",
     "\n",
-    "  \\psi(E)\n",
-    "  & \\propto \\psi_0 \\int_0^\\infty e^{i\\left(E-E_0+\\tfrac{i}{2}\\Gamma\\right)t}\\,\\mathrm{d}t\n",
+    "$$\n",
+    "\\psi(E)\n",
+    "\\propto \\psi_0 \\int_0^\\infty e^{i\\left(E-E_0+\\tfrac{i}{2}\\Gamma\\right)t}\\,\\mathrm{d}t\n",
+    "\\propto \\frac{1}{\\left(E-E_0\\right) - \\tfrac{i}{2}\\Gamma}\n",
+    "$$\n",
     "\n",
-    "  & \\propto \\frac{1}{\\left(E-E_0\\right) - \\tfrac{i}{2}\\Gamma}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The probability to observe the particle at energy $E$ is therefore:\n",
     "\n",
     "$$\n",
@@ -132,13 +128,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
-    ".. todo::\n",
-    "    Describe relation between $\\psi(E)$ and transition amplitude $M$"
+    "```{todo}\n",
+    "Describe relation between $\\psi(E)$ and transition amplitude $M$\n",
+    "```"
    ]
   },
   {
@@ -166,27 +165,32 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
-    ".. todo::\n",
+    "```{todo}\n",
+    "Describe how the **relativistic Breit-Wigner formula**:\n",
     "\n",
-    "  Describe how the **relativistic Breit-Wigner formula**:\n",
+    "$$\n",
+    "M(E) \\propto \\frac{m_0\\Gamma}{m_0^2 - m_{ab}^2 - im_0\\Gamma}\n",
+    "$$\n",
     "\n",
-    "  .. math::\n",
-    "\n",
-    "    M(E) \\propto\n",
-    "    \\frac{m_0\\Gamma}{m_0^2 - m_{ab}^2 - im_0\\Gamma}\n",
-    "\n",
-    "  is derived and why this is important in case of $\\Gamma \\gg m_0$."
+    "is derived and why this is important in case of $\\Gamma \\gg m_0$.\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "from pwa_pages import plot\n",
@@ -196,7 +200,7 @@
     "gamma2_4 = Gamma ** 2 / 4\n",
     "plot(\n",
     "    lambda x: gamma2_4 / ((x - E0) ** 2 + gamma2_4),\n",
-    "    range=(0, 1.5),\n",
+    "    plot_range=(0, 1.5),\n",
     "    title=\"Non-relativistic Breit-Wigner\",\n",
     "    xlabel=\"$E$ (A.U.)\",\n",
     "    ylabel=\"$|M(E)|^2$\",\n",
