build: switch to sympy

--- a/docs/theory/dynamics.ipynb
+++ b/docs/theory/dynamics.ipynb
@@ -33,11 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "```{todo}\n",
     "Explain why this new matrix interesting?\n",
@@ -46,11 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "```{todo}\n",
     "Definition in terms of $T$-matrix\n",
@@ -73,11 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "```{todo}\n",
     "Derive from $K$-matrix instead/as well.\n",
@@ -129,11 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "```{todo}\n",
     "Describe relation between $\\psi(E)$ and transition amplitude $M$\n",
@@ -166,11 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "```{todo}\n",
     "Describe how the **relativistic Breit-Wigner formula**:\n",
@@ -193,18 +173,19 @@
    },
    "outputs": [],
    "source": [
-    "from pwa_pages import plot\n",
+    "from sympy import symbols\n",
+    "from sympy.plotting import plot, plot_parametric\n",
     "\n",
-    "Gamma = 0.25\n",
-    "E0 = 0.75\n",
+    "x, Gamma, E0 = symbols(\"x \\Gamma E_0\")\n",
     "gamma2_4 = Gamma ** 2 / 4\n",
+    "breit_wigner = gamma2_4 / ((x - E0) ** 2 + gamma2_4)\n",
+    "\n",
     "plot(\n",
-    "    lambda x: gamma2_4 / ((x - E0) ** 2 + gamma2_4),\n",
-    "    plot_range=(0, 1.5),\n",
+    "    breit_wigner.subs({\"\\Gamma\": 0.25, \"E_0\": 0.75}),\n",
+    "    xlim=(0, 1.5),\n",
     "    title=\"Non-relativistic Breit-Wigner\",\n",
     "    xlabel=\"$E$ (A.U.)\",\n",
-    "    ylabel=\"$|M(E)|^2$\",\n",
-    ")"
+    ");"
    ]
   },
   {
