fix: change Chung 2014 paper to manuscript

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -44,7 +44,7 @@
   number = {5}
 }
 
-@book{chungSpinFormalismsUpdated2014,
+@misc{chungSpinFormalismsUpdated2014,
   title = {Spin {{Formalisms}} ({{Updated Version}})},
   author = {Chung, Suh-Urk},
   year = {2014},
