fix: add both URL and DOI

--- a/docs/bibliography-Software.bib
+++ b/docs/bibliography-Software.bib
@@ -9,6 +9,7 @@
   pages = {198--242},
   issn = {00104655},
   doi = {10.1016/j.cpc.2018.04.017},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0010465518301334},
   journal = {Computer Physics Communications},
   language = {en}
 }
