--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -8,6 +8,7 @@
   pages = {417--423},
   issn = {03759474},
   doi = {10.1016/0375-9474(72)90305-3},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/0375947472903053},
   journal = {Nuclear Physics A},
   language = {en},
   number = {2}
@@ -39,17 +40,19 @@
   pages = {404--430},
   issn = {00033804, 15213889},
   doi = {10.1002/andp.19955070504},
+  url = {http://doi.wiley.com/10.1002/andp.19955070504},
   journal = {Annalen der Physik},
   language = {de},
   number = {5}
 }
 
-@misc{chungSpinFormalismsUpdated2014,
+@techreport{chungSpinFormalismsUpdated2014,
   title = {Spin {{Formalisms}} ({{Updated Version}})},
   author = {Chung, Suh-Urk},
   year = {2014},
   month = jul,
-  publisher = {{Brookhaven National Laboratory}},
+  pages = {BNL--76975-2006-IR, 890945},
+  institution = {{Brookhaven National Laboratory}},
   url = {https://suchung.web.cern.ch/spinfm1.pdf},
   collaborator = {Laboratory, Brookhaven National and of Scientific, United States Department of Energy Office and Information, Technical and {DOE/SC.}}
 }
@@ -62,7 +65,7 @@
   issn = {01466410},
   doi = {10.1016/j.ppnp.2020.103755},
   abstract = {Despite decades of research, we still lack a detailed quantitative understanding of the way quantum chromodynamics (QCD) generates the spectrum of hadrons. Precise experimental studies of the hadron excitation spectrum and the dynamics of hadrons help to improve models and to test effective theories and lattice QCD simulations. In addition, QCD seems to allow hadrons beyond the three-quark and quark-antiquark configurations of the constituent-quark model. These so-called exotic hadrons contain additional constituent (anti)quarks or excited gluonic fields that contribute to the quantum numbers of the hadron. The COMPASS experiment at CERN is studying the excitation spectrum of light mesons composed of up, down, and strange quarks. The excited mesons are produced via the strong interaction by scattering a 190 GeV/c pion beam off proton or nuclear targets. On heavy nuclear targets, in addition the electromagnetic interaction contributes in the form of quasi-real photon exchange at very low four-momentum transfer squared. COMPASS has performed the most comprehensive analyses to date of isovector resonances decaying into multi-particle final states. In this review, we give a general introduction into scattering theory and the employed partial-wave analysis techniques. We also describe novel methods developed for the high-precision COMPASS data. The COMPASS results are summarized and compared to previous measurements. In addition, we discuss possible signals for exotic mesons and conclude that COMPASS data provide solid evidence for the existence of the manifestly exotic \$\textbackslash pi\_1(1600)\$, which has quantum numbers forbidden for a quark-model state, and of the \$a\_1(1420)\$, which does not fit into the quark-model spectrum. By isolating the contributions from quasi-real photon exchange, COMPASS has measured the radiative widths of the \$a\_2(1320)\$ and, for the first time, that of the \$\textbackslash pi\_2(1670)\$.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1909.06366},
   eprinttype = {arxiv},
   journal = {Progress in Particle and Nuclear Physics}
@@ -92,7 +95,7 @@
   year = {2004},
   month = dec,
   abstract = {In the 90s of the last century high statistics experiments with fully equipped 4\$\textbackslash pi\$ detectors have lead to a better insight in the spectrum of hadrons. In particular the finding of crypto-exotic and \$J\^\{PC\}\$ exotic states tremendously improved the experimental situation in meson spectroscopy. All this was possible only with sophisticated analysis methods like the decomposition of measured phase-space distribution into partial waves and to express the partial waves in terms of complicated dynamical functions. This paper gives an introduction about the concepts and formalisms involved.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {hep-ph/0412069},
   eprinttype = {arxiv},
   journal = {arXiv}
