fix: remove abstracts from bibliography

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -24,7 +24,6 @@
   publisher = {{Springer International Publishing : Imprint: Springer}},
   address = {{Cham}},
   doi = {10.1007/978-3-319-98527-5},
-  abstract = {Novel forms of matter, such as states made of gluons (glueballs), multiquark mesons or baryons and hybrid mesons are predicted by low energy QCD, for which several candidates have recently been identified. Searching for such exotic states of matter and studying their production and decay properties in detail has become a flourishing field at the experimental facilities now available or being built - e.g. BESIII in Beijing, BELLE II at SuperKEKB, GlueX at Jefferson Lab, PANDA at FAIR, J-PARC and in the upgraded LHC experiments, in particular LHCb. A modern primer in the field is required so as to both revive and update the teaching of a new generation of researchers in the field of QCD. These lectures on hadron spectroscopy are intended for Master and PhD students and have been originally developed for a course delivered at the Stefan Meyer Institute of the Austrian Academy of Sciences. They are phenomenologically oriented and intended as complementary material for basic courses in particle and nuclear physics. The book describes the spectra of light and heavy mesons and baryons, and introduces the fundamental properties based on symmetries. Further, it derives multiplet structures, mixing angle, decay coupling constants, magnetic moments of baryons, and predictions for multiquark states and compares these with suitable experimental data. Basic methods of calculating decay angular distributions and determining masses and widths of resonances are also presented. The appendices provide students and newcomers to the field with the necessary background information, and include a set of problems and solutions},
   isbn = {978-3-319-98527-5},
   lccn = {Electronic Resource},
   number = {949},
@@ -64,7 +63,6 @@
   month = dec,
   issn = {01466410},
   doi = {10.1016/j.ppnp.2020.103755},
-  abstract = {Despite decades of research, we still lack a detailed quantitative understanding of the way quantum chromodynamics (QCD) generates the spectrum of hadrons. Precise experimental studies of the hadron excitation spectrum and the dynamics of hadrons help to improve models and to test effective theories and lattice QCD simulations. In addition, QCD seems to allow hadrons beyond the three-quark and quark-antiquark configurations of the constituent-quark model. These so-called exotic hadrons contain additional constituent (anti)quarks or excited gluonic fields that contribute to the quantum numbers of the hadron. The COMPASS experiment at CERN is studying the excitation spectrum of light mesons composed of up, down, and strange quarks. The excited mesons are produced via the strong interaction by scattering a 190 GeV/c pion beam off proton or nuclear targets. On heavy nuclear targets, in addition the electromagnetic interaction contributes in the form of quasi-real photon exchange at very low four-momentum transfer squared. COMPASS has performed the most comprehensive analyses to date of isovector resonances decaying into multi-particle final states. In this review, we give a general introduction into scattering theory and the employed partial-wave analysis techniques. We also describe novel methods developed for the high-precision COMPASS data. The COMPASS results are summarized and compared to previous measurements. In addition, we discuss possible signals for exotic mesons and conclude that COMPASS data provide solid evidence for the existence of the manifestly exotic \$\textbackslash pi\_1(1600)\$, which has quantum numbers forbidden for a quark-model state, and of the \$a\_1(1420)\$, which does not fit into the quark-model spectrum. By isolating the contributions from quasi-real photon exchange, COMPASS has measured the radiative widths of the \$a\_2(1320)\$ and, for the first time, that of the \$\textbackslash pi\_2(1670)\$.},
   archiveprefix = {arXiv},
   eprint = {1909.06366},
   eprinttype = {arxiv},
@@ -94,7 +92,6 @@
   author = {Peters, Klaus},
   year = {2004},
   month = dec,
-  abstract = {In the 90s of the last century high statistics experiments with fully equipped 4\$\textbackslash pi\$ detectors have lead to a better insight in the spectrum of hadrons. In particular the finding of crypto-exotic and \$J\^\{PC\}\$ exotic states tremendously improved the experimental situation in meson spectroscopy. All this was possible only with sophisticated analysis methods like the decomposition of measured phase-space distribution into partial waves and to express the partial waves in terms of complicated dynamical functions. This paper gives an introduction about the concepts and formalisms involved.},
   archiveprefix = {arXiv},
   eprint = {hep-ph/0412069},
   eprinttype = {arxiv},
@@ -106,8 +103,7 @@
   author = {Richman, Jeffrey D.},
   year = {1984},
   month = jun,
-  url = {https://inspirehep.net/literature/202987},
-  abstract = {The helicity formalism is developed in detail and used to obtain final state angular distributions in relativistic scattering and decay processes. The topics covered include properties of rotation operators, construction of helicity states, scattering and decay amplitudes, the parity of helicity states, and the treatment of identical particles.}
+  url = {https://inspirehep.net/literature/202987}
 }
 
 @incollection{tanabashi15QuarkModel2019,
