--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -1,4 +1,19 @@
 
+@article{aaijObservationResonancesConsistent2015,
+  title = {Observation of 𝐽/𝜓 𝑝 {{Resonances Consistent}} with {{Pentaquark States}} in 𝛬𝑏⁰ → 𝐽/𝜓𝐾⁻𝑝 {{Decays}}},
+  author = {Aaij, R. and Adeva, B. and Adinolfi, M. and Affolder, A. and Ajaltouni, Z. and Akar, S. and Albrecht, J. and Alessio, F. and Alexander, M. and Ali, S. and Alkhazov, G. and Alvarez Cartelle, P. and Alves, A. A. and Amato, S. and Amerio, S. and Amhis, Y. and An, L. and Anderlini, L. and Anderson, J. and Andreassi, G. and Andreotti, M. and Andrews, J. E. and Appleby, R. B. and Aquines Gutierrez, O. and Archilli, F. and {d’Argent}, P. and Artamonov, A. and Artuso, M. and Aslanides, E. and Auriemma, G. and Baalouch, M. and Bachmann, S. and Back, J. J. and Badalov, A. and Baesso, C. and Baldini, W. and Barlow, R. J. and Barschel, C. and Barsuk, S. and Barter, W. and Batozskaya, V. and Battista, V. and Bay, A. and Beaucourt, L. and Beddow, J. and Bedeschi, F. and Bediaga, I. and Bel, L. J. and Bellee, V. and Belloli, N. and Belyaev, I. and {Ben-Haim}, E. and Bencivenni, G. and Benson, S. and Benton, J. and Berezhnoy, A. and Bernet, R. and Bertolin, A. and Bettler, M.-O. and {van Beuzekom}, M. and Bien, A. and Bifani, S. and Billoir, P. and Bird, T. and Birnkraut, A. and Bizzeti, A. and Blake, T. and Blanc, F. and Blouw, J. and Blusk, S. and Bocci, V. and Bondar, A. and Bondar, N. and Bonivento, W. and Borghi, S. and Borsato, M. and Bowcock, T. J. V. and Bowen, E. and Bozzi, C. and Braun, S. and Britsch, M. and Britton, T. and Brodzicka, J. and Brook, N. H. and Bursche, A. and Buytaert, J. and Cadeddu, S. and Calabrese, R. and Calvi, M. and Calvo Gomez, M. and Campana, P. and Campora Perez, D. and Capriotti, L. and Carbone, A. and Carboni, G. and Cardinale, R. and Cardini, A. and Carniti, P. and Carson, L. and Carvalho Akiba, K. and Casse, G. and Cassina, L. and Castillo Garcia, L. and Cattaneo, M. and Cauet, Ch. and Cavallero, G. and Cenci, R. and Charles, M. and Charpentier, Ph. and Chefdeville, M. and Chen, S. and Cheung, S.-F. and Chiapolini, N. and Chrzaszcz, M. and Cid Vidal, X. and Ciezarek, G. and Clarke, P. E. L. and Clemencic, M. and Cliff, H. V. and Closier, J. and Coco, V. and Cogan, J. and Cogneras, E. and Cogoni, V. and Cojocariu, L. and Collazuol, G. and Collins, P. and {Comerma-Montells}, A. and Contu, A. and Cook, A. and Coombes, M. and Coquereau, S. and Corti, G. and Corvo, M. and Couturier, B. and Cowan, G. A. and Craik, D. C. and Crocombe, A. and Cruz Torres, M. and Cunliffe, S. and Currie, R. and D’Ambrosio, C. and Dall’Occo, E. and Dalseno, J. and David, P. N. Y. and Davis, A. and De Bruyn, K. and De Capua, S. and De Cian, M. and De Miranda, J. M. and De Paula, L. and De Simone, P. and Dean, C.-T. and Decamp, D. and Deckenhoff, M. and Del Buono, L. and Déléage, N. and Demmer, M. and Derkach, D. and Deschamps, O. and Dettori, F. and Dey, B. and Di Canto, A. and Di Ruscio, F. and Dijkstra, H. and Donleavy, S. and Dordei, F. and Dorigo, M. and Dosil Suárez, A. and Dossett, D. and Dovbnya, A. and Dreimanis, K. and Dufour, L. and Dujany, G. and Dupertuis, F. and Durante, P. and Dzhelyadin, R. and Dziurda, A. and Dzyuba, A. and Easo, S. and Egede, U. and Egorychev, V. and Eidelman, S. and Eisenhardt, S. and Eitschberger, U. and Ekelhof, R. and Eklund, L. and El Rifai, I. and Elsasser, Ch. and Ely, S. and Esen, S. and Evans, H. M. and Evans, T. and Falabella, A. and Färber, C. and Farley, N. and Farry, S. and Fay, R. and Ferguson, D. and Fernandez Albor, V. and Ferrari, F. and Ferreira Rodrigues, F. and {Ferro-Luzzi}, M. and Filippov, S. and Fiore, M. and Fiorini, M. and Firlej, M. and Fitzpatrick, C. and Fiutowski, T. and Fohl, K. and Fol, P. and Fontana, M. and Fontanelli, F. and Forty, R. and Francisco, O. and Frank, M. and Frei, C. and Frosini, M. and Fu, J. and Furfaro, E. and Gallas Torreira, A. and Galli, D. and Gallorini, S. and Gambetta, S. and Gandelman, M. and Gandini, P. and Gao, Y. and García Pardiñas, J. and Garra Tico, J. and Garrido, L. and Gascon, D. and Gaspar, C. and Gauld, R. and Gavardi, L. and Gazzoni, G. and Geraci, A. and Gerick, D. and Gersabeck, E. and Gersabeck, M. and Gershon, T. and Ghez, Ph. and Gianelle, A. and Gianì, S. and Gibson, V. and Girard, O. G. and Giubega, L. and Gligorov, V. V. and Göbel, C. and Golubkov, D. and Golutvin, A. and Gomes, A. and Gotti, C. and Grabalosa Gándara, M. and Graciani Diaz, R. and Granado Cardoso, L. A. and Graugés, E. and Graverini, E. and Graziani, G. and Grecu, A. and Greening, E. and Gregson, S. and Griffith, P. and Grillo, L. and Grünberg, O. and Gui, B. and Gushchin, E. and Guz, Yu. and Gys, T. and Hadavizadeh, T. and Hadjivasiliou, C. and Haefeli, G. and Haen, C. and Haines, S. C. and Hall, S. and Hamilton, B. and Han, X. and {Hansmann-Menzemer}, S. and Harnew, N. and Harnew, S. T. and Harrison, J. and He, J. and Head, T. and Heijne, V. and Hennessy, K. and Henrard, P. and Henry, L. and Hernando Morata, J. A. and {van Herwijnen}, E. and Heß, M. and Hicheur, A. and Hill, D. and Hoballah, M. and Hombach, C. and Hulsbergen, W. and Humair, T. and Hussain, N. and Hutchcroft, D. and Hynds, D. and Idzik, M. and Ilten, P. and Jacobsson, R. and Jaeger, A. and Jalocha, J. and Jans, E. and Jawahery, A. and Jing, F. and John, M. and Johnson, D. and Jones, C. R. and Joram, C. and Jost, B. and Jurik, N. and Kandybei, S. and Kanso, W. and Karacson, M. and Karbach, T. M. and Karodia, S. and Kecke, M. and Kelsey, M. and Kenyon, I. R. and Kenzie, M. and Ketel, T. and Khanji, B. and Khurewathanakul, C. and Klaver, S. and Klimaszewski, K. and Kochebina, O. and Kolpin, M. and Komarov, I. and Koopman, R. F. and Koppenburg, P. and Kozeiha, M. and Kravchuk, L. and Kreplin, K. and Kreps, M. and Krocker, G. and Krokovny, P. and Kruse, F. and Krzemien, W. and Kucewicz, W. and Kucharczyk, M. and Kudryavtsev, V. and Kuonen, A. K. and Kurek, K. and Kvaratskheliya, T. and Lacarrere, D. and Lafferty, G. and Lai, A. and Lambert, D. and Lanfranchi, G. and Langenbruch, C. and Langhans, B. and Latham, T. and Lazzeroni, C. and Le Gac, R. and {van Leerdam}, J. and Lees, J.-P. and Lefèvre, R. and Leflat, A. and Lefrançois, J. and Leroy, O. and Lesiak, T. and Leverington, B. and Li, Y. and Likhomanenko, T. and Liles, M. and Lindner, R. and Linn, C. and Lionetto, F. and Liu, B. and Liu, X. and Loh, D. and Longstaff, I. and Lopes, J. H. and Lucchesi, D. and Lucio Martinez, M. and Luo, H. and Lupato, A. and Luppi, E. and Lupton, O. and Lusardi, N. and Lusiani, A. and Machefert, F. and Maciuc, F. and Maev, O. and Maguire, K. and Malde, S. and Malinin, A. and Manca, G. and Mancinelli, G. and Manning, P. and Mapelli, A. and Maratas, J. and Marchand, J. F. and Marconi, U. and Marin Benito, C. and Marino, P. and Marks, J. and Martellotti, G. and Martin, M. and Martinelli, M. and Martinez Santos, D. and Martinez Vidal, F. and Martins Tostes, D. and Massafferri, A. and Matev, R. and Mathad, A. and Mathe, Z. and Matteuzzi, C. and Mauri, A. and Maurin, B. and Mazurov, A. and McCann, M. and McCarthy, J. and McNab, A. and McNulty, R. and Meadows, B. and Meier, F. and Meissner, M. and Melnychuk, D. and Merk, M. and Milanes, D. A. and Minard, M.-N. and Mitzel, D. S. and Molina Rodriguez, J. and Monroy, I. A. and Monteil, S. and Morandin, M. and Morawski, P. and Mordà, A. and Morello, M. J. and Moron, J. and Morris, A. B. and Mountain, R. and Muheim, F. and Müller, J. and Müller, K. and Müller, V. and Mussini, M. and Muster, B. and Naik, P. and Nakada, T. and Nandakumar, R. and Nandi, A. and Nasteva, I. and Needham, M. and Neri, N. and Neubert, S. and Neufeld, N. and Neuner, M. and Nguyen, A. D. and Nguyen, T. D. and {Nguyen-Mau}, C. and Niess, V. and Niet, R. and Nikitin, N. and Nikodem, T. and Ninci, D. and Novoselov, A. and O’Hanlon, D. P. and {Oblakowska-Mucha}, A. and Obraztsov, V. and Ogilvy, S. and Okhrimenko, O. and Oldeman, R. and Onderwater, C. J. G. and Osorio Rodrigues, B. and Otalora Goicochea, J. M. and Otto, A. and Owen, P. and Oyanguren, A. and Palano, A. and Palombo, F. and Palutan, M. and Panman, J. and Papanestis, A. and Pappagallo, M. and Pappalardo, L. L. and Pappenheimer, C. and Parkes, C. and Passaleva, G. and Patel, G. D. and Patel, M. and Patrignani, C. and Pearce, A. and Pellegrino, A. and Penso, G. and Pepe Altarelli, M. and Perazzini, S. and Perret, P. and Pescatore, L. and Petridis, K. and Petrolini, A. and Petruzzo, M. and Picatoste Olloqui, E. and Pietrzyk, B. and Pilař, T. and Pinci, D. and Pistone, A. and Piucci, A. and Playfer, S. and Plo Casasus, M. and Poikela, T. and Polci, F. and Poluektov, A. and Polyakov, I. and Polycarpo, E. and Popov, A. and Popov, D. and Popovici, B. and Potterat, C. and Price, E. and Price, J. D. and Prisciandaro, J. and Pritchard, A. and Prouve, C. and Pugatch, V. and Puig Navarro, A. and Punzi, G. and Qian, W. and Quagliani, R. and Rachwal, B. and Rademacker, J. H. and Rama, M. and Rangel, M. S. and Raniuk, I. and Rauschmayr, N. and Raven, G. and Redi, F. and Reichert, S. and Reid, M. M. and {dos Reis}, A. C. and Ricciardi, S. and Richards, S. and Rihl, M. and Rinnert, K. and Rives Molina, V. and Robbe, P. and Rodrigues, A. B. and Rodrigues, E. and Rodriguez Lopez, J. A. and Rodriguez Perez, P. and Roiser, S. and Romanovsky, V. and Romero Vidal, A. and Ronayne, J. W. and Rotondo, M. and Rouvinet, J. and Ruf, T. and Ruiz Valls, P. and Saborido Silva, J. J. and Sagidova, N. and Sail, P. and Saitta, B. and Salustino Guimaraes, V. and Sanchez Mayordomo, C. and Sanmartin Sedes, B. and Santacesaria, R. and Santamarina Rios, C. and Santimaria, M. and Santovetti, E. and Sarti, A. and Satriano, C. and Satta, A. and Saunders, D. M. and Savrina, D. and Schiller, M. and Schindler, H. and Schlupp, M. and Schmelling, M. and Schmelzer, T. and Schmidt, B. and Schneider, O. and Schopper, A. and Schubiger, M. and Schune, M.-H. and Schwemmer, R. and Sciascia, B. and Sciubba, A. and Semennikov, A. and Serra, N. and Serrano, J. and Sestini, L. and Seyfert, P. and Shapkin, M. and Shapoval, I. and Shcheglov, Y. and Shears, T. and Shekhtman, L. and Shevchenko, V. and Shires, A. and Siddi, B. G. and Silva Coutinho, R. and Simi, G. and Sirendi, M. and Skidmore, N. and Skillicorn, I. and Skwarnicki, T. and Smith, E. and Smith, E. and Smith, I. T. and Smith, J. and Smith, M. and Snoek, H. and Sokoloff, M. D. and Soler, F. J. P. and Soomro, F. and Souza, D. and Souza De Paula, B. and Spaan, B. and Spradlin, P. and Sridharan, S. and Stagni, F. and Stahl, M. and Stahl, S. and Stefkova, S. and Steinkamp, O. and Stenyakin, O. and Stevenson, S. and Stoica, S. and Stone, S. and Storaci, B. and Stracka, S. and Straticiuc, M. and Straumann, U. and Sun, L. and Sutcliffe, W. and Swientek, K. and Swientek, S. and Syropoulos, V. and Szczekowski, M. and Szczypka, P. and Szumlak, T. and T’Jampens, S. and Tayduganov, A. and Tekampe, T. and Teklishyn, M. and Tellarini, G. and Teubert, F. and Thomas, C. and Thomas, E. and {van Tilburg}, J. and Tisserand, V. and Tobin, M. and Todd, J. and Tolk, S. and Tomassetti, L. and Tonelli, D. and {Topp-Joergensen}, S. and Torr, N. and Tournefier, E. and Tourneur, S. and Trabelsi, K. and Tran, M. T. and Tresch, M. and Trisovic, A. and Tsaregorodtsev, A. and Tsopelas, P. and Tuning, N. and Ukleja, A. and Ustyuzhanin, A. and Uwer, U. and Vacca, C. and Vagnoni, V. and Valenti, G. and Vallier, A. and Vazquez Gomez, R. and Vazquez Regueiro, P. and Vázquez Sierra, C. and Vecchi, S. and Velthuis, J. J. and Veltri, M. and Veneziano, G. and Vesterinen, M. and Viaud, B. and Vieira, D. and Vieites Diaz, M. and {Vilasis-Cardona}, X. and Vollhardt, A. and Volyanskyy, D. and Voong, D. and Vorobyev, A. and Vorobyev, V. and Voß, C. and {de Vries}, J. A. and Waldi, R. and Wallace, C. and Wallace, R. and Walsh, J. and Wandernoth, S. and Wang, J. and Ward, D. R. and Watson, N. K. and Websdale, D. and Weiden, A. and Whitehead, M. and Wilkinson, G. and Wilkinson, M. and Williams, M. and Williams, M. P. and Williams, M. and Williams, T. and Wilson, F. F. and Wimberley, J. and Wishahi, J. and Wislicki, W. and Witek, M. and Wormser, G. and Wotton, S. A. and Wright, S. and Wyllie, K. and Xie, Y. and Xu, Z. and Yang, Z. and Yu, J. and Yuan, X. and Yushchenko, O. and Zangoli, M. and Zavertyaev, M. and Zhang, L. and Zhang, Y. and Zhelezov, A. and Zhokhov, A. and Zhong, L. and Zucchelli, S. and {LHCb Collaboration}},
+  year = {2015},
+  month = aug,
+  volume = {115},
+  pages = {072001},
+  issn = {0031-9007, 1079-7114},
+  doi = {10.1103/PhysRevLett.115.072001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.072001},
+  journal = {Physical Review Letters},
+  language = {en},
+  number = {7}
+}
+
 @article{aitchisonMatrixFormalismOverlapping1972,
   title = {The 𝐾-Matrix Formalism for Overlapping Resonances},
   author = {Aitchison, I.J.R.},
@@ -40,6 +55,21 @@
   language = {en}
 }
 
+@article{chenCoherentHelicityAmplitude2017,
+  title = {Coherent Helicity Amplitude for Sequential Decays},
+  author = {Chen, Hong and Ping, Rong-Gang},
+  year = {2017},
+  month = apr,
+  volume = {95},
+  pages = {076010},
+  issn = {2470-0010, 2470-0029},
+  doi = {10.1103/PhysRevD.95.076010},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.95.076010},
+  journal = {Physical Review D},
+  language = {en},
+  number = {7}
+}
+
 @article{chungPartialWaveAnalysis1995,
   title = {{Partial wave analysis in 𝐾-matrix formalism}},
   author = {Chung, Suh-Urk and Brose, J. and Hackmann, R. and Klempt, E. and Spanier, S. and Strassburger, C.},
@@ -66,6 +96,23 @@
   collaborator = {Laboratory, Brookhaven National and of Scientific, United States Department of Energy Office and Information, Technical and {DOE/SC.}}
 }
 
+@article{jpaccollaborationDalitzplotDecompositionThreebody2020,
+  title = {Dalitz-Plot Decomposition for Three-Body Decays},
+  author = {{JPAC Collaboration} and Mikhasenko, M. and Albaladejo, M. and Bibrzycki, L. and {Fernandez-Ramirez}, C. and Mathieu, V. and Mitchell, S. and Pappagallo, M. and Pilloni, A. and Winney, D. and Skwarnicki, T. and Szczepaniak, A. P.},
+  year = {2020},
+  month = feb,
+  volume = {101},
+  pages = {034033},
+  issn = {2470-0010, 2470-0029},
+  doi = {10.1103/PhysRevD.101.034033},
+  url = {http://arxiv.org/abs/1910.04566},
+  archiveprefix = {arXiv},
+  eprint = {1910.04566},
+  eprinttype = {arxiv},
+  journal = {Physical Review D},
+  number = {3}
+}
+
 @article{ketzerLightMesonSpectroscopyCOMPASS2019,
   title = {Light-{{Meson Spectroscopy}} with {{COMPASS}}},
   author = {Ketzer, Bernhard and Grube, Boris and Ryabchikov, Dmitry},
@@ -85,6 +132,18 @@
   year = {1996},
   month = jan,
   url = {https://home.fnal.gov/~kutschke/Angdist/angdist.ps}
+}
+
+@article{marangottoHelicityAmplitudesGeneric2020,
+  title = {Helicity Amplitudes for Generic Multi-Body Particle Decays Featuring Multiple Decay Chains},
+  author = {Marangotto, Daniele},
+  year = {2020},
+  month = nov,
+  url = {http://arxiv.org/abs/1911.10025},
+  archiveprefix = {arXiv},
+  eprint = {1911.10025},
+  eprinttype = {arxiv},
+  journal = {arXiv}
 }
 
 @book{martinElementaryParticleTheory1970,
@@ -140,6 +199,18 @@
   url = {https://pdg.lbl.gov/2020/reviews/rpp2020-rev-resonances.pdf},
   language = {en},
   series = {Physical {{Review}}}
+}
+
+@article{wangNovelMethodTest2020,
+  title = {A Novel Method to Test Particle Ordering and Final State Alignment in Helicity Formalism},
+  author = {Wang, Mengzhen and Jiang, Yi and Liu, Yinrui and Qian, Wenbin and Lyu, Xiaorui and Zhang, Liming},
+  year = {2020},
+  month = dec,
+  url = {http://arxiv.org/abs/2012.03699},
+  archiveprefix = {arXiv},
+  eprint = {2012.03699},
+  eprinttype = {arxiv},
+  journal = {arXiv}
 }
 
 @book{weinbergQuantumTheoryFields1995,
