--- a/docs/theory/dynamics.ipynb
+++ b/docs/theory/dynamics.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%config Completer.use_jedi = False\n",
+    "%config InlineBackend.figure_formats = ['svg']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
